force-app/main/default/objects/Stg_Course_Fee__c.object
<CustomObject>
    <description>Staging object to store all the fee related to course</description>
    <fields>
        <fullName>Base_Total_Course_Fee__c</fullName>
        <label>Base Total Course Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Required__c</fullName>
        <label>CP Required</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Alternate_Code__c</fullName>
        <label>Calendar Alternate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Type__c</fullName>
        <label>Calendar Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuing_Approved_Percentage__c</fullName>
        <label>Continuing Approved Percentage</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Course_Category__c</fullName>
        <label>Course Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Deposit_Amount__c</fullName>
        <label>Course Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Duration__c</fullName>
        <label>Course Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Point_Duration_FT__c</fullName>
        <label>Course Point Duration FT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Point_Duration_PT__c</fullName>
        <label>Course Point Duration PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Short_Name__c</fullName>
        <label>Course Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <label>Course Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Total_EFTSL__c</fullName>
        <label>Course Total EFTSL</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Type_Description__c</fullName>
        <label>Course Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version__c</fullName>
        <label>Course Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Double_Degree__c</fullName>
        <label>Double Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID from Callista</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID from Callista</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Band_Code_Year__c</fullName>
        <label>Fee Band Code Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Band_Code__c</fullName>
        <label>Fee Band Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Band_Course_Fee__c</fullName>
        <label>Fee Band Course Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <label>Fee Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Increase_Percentage__c</fullName>
        <label>Fee Increase Percentage</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Per_Study_Period__c</fullName>
        <label>Fee Per Study Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicative_Total_Course_Fee__c</fullName>
        <label>Indicative Total Course Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_ind__c</fullName>
        <label>Publish ind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Year_Ind__c</fullName>
        <label>Quote Year Ind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Org_Unit_Code__c</fullName>
        <label>Responsible Org Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Org_Unit_Desc__c</fullName>
        <label>Responsible Org Unit Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Course_Point_Annual_Load__c</fullName>
        <label>Standard Course Point Annual Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Periods_Per_Year__c</fullName>
        <label>Study Periods Per Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Message__c</fullName>
        <description>Details of the sync between stg course fee and course fee</description>
        <inlineHelpText>Details of the sync between stg course fee and course fee</inlineHelpText>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <description>Status of the synchronisation between staging course fee to course fee</description>
        <inlineHelpText>Status of the synchronisation between staging course fee to course fee</inlineHelpText>
        <label>Sync Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT SYNC</fullName>
                    <default>true</default>
                    <label>NOT SYNC</label>
                </value>
                <value>
                    <fullName>RESYNC</fullName>
                </value>
                <value>
                    <fullName>SYNC</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <description>Used to map the Unit Set Code from Callista</description>
        <label>Unit Set Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Version__c</fullName>
        <label>Unit Set Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weeks_Per_Study_Period__c</fullName>
        <label>Weeks Per Study Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_One_Fee__c</fullName>
        <label>Year One Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Stg Course Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Unit_Set_Code__c</columns>
        <columns>Fee_Band_Code__c</columns>
        <columns>Fee_Category__c</columns>
        <columns>Fee_Band_Code_Year__c</columns>
        <columns>Course_Status__c</columns>
        <columns>Course_Category__c</columns>
        <columns>Sync_Status__c</columns>
        <columns>Sync_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>Sync_Status__c</columns>
        <columns>Responsible_Org_Unit_Code__c</columns>
        <columns>Responsible_Org_Unit_Desc__c</columns>
        <columns>Fee_Category__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Unit_Set_Code__c</columns>
        <columns>Sync_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sync_Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>All Errors</label>
    </listViews>
    <listViews>
        <fullName>Stg_Course_Fees_Monash_Abroad</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Course_Category__c</columns>
        <columns>Fee_Category__c</columns>
        <columns>Unit_Set_Code__c</columns>
        <columns>Fee_Band_Code__c</columns>
        <columns>Fee_Band_Code_Year__c</columns>
        <columns>Course_Status__c</columns>
        <columns>Sync_Message__c</columns>
        <columns>Sync_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Code__c</field>
            <operation>startsWith</operation>
            <value>7001,7002,7003,7004,8001,8002,8003,8004</value>
        </filters>
        <label>Stg Course Fees - Monash Abroad</label>
    </listViews>
    <nameField>
        <label>Stg Course Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stg Course Fees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>